feat: error handling docs
