# cmd/backend/docs/swagger.json
@@ -252,6 +252,12 @@
                         "schema": {
                             "$ref": "#/definitions/setting.WorkerPoolResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_kappusuton-yon-tebaru_backend_internal_httputils.ErrResponse"
+                        }
                     }
                 }
             },
@@ -280,6 +286,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/setting.WorkerPoolResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_kappusuton-yon-tebaru_backend_internal_httputils.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_kappusuton-yon-tebaru_backend_internal_httputils.ErrResponse"
                         }
                     }
                 }
